--- a/lesson 4/styles/large.css
+++ b/lesson 4/styles/large.css
@@ -1,5 +1,74 @@
-@media (min-width: 1025px) {   
-    header img {
-        width: 120px;
+@media only screen and (min-width: 750px){
+    nav ul{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin: 10px;
+    }
+
+    main{
+        display:grid;
+        grid-template-columns: 1fr 2fr 1fr;
+    }
+    
+    #hero{
+        border: solid black 1px;
+        grid-column: 2/3;
+        grid-row: 1/3;
+        margin: 5px;
+    }
+    
+    #events{
+        border: solid black 1px;
+        grid-column: 1/2;
+        grid-row: 1/2;
+        margin: 5px;
+    }
+    
+    #weather{
+        border: solid black 1px;
+        margin: 5px;
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    
+    #news{
+        border: solid black 1px;
+        grid-column: 2/3;
+        grid-row: 3/4;
+        margin: 5px;
+    }
+
+    #join{
+        display:grid;
+        border: solid black 1px;
+        grid-column:1/2;
+        grid-row: 3/4;
+        margin: 5px;
+    }
+    
+    #spotlight1{
+        border: solid black 1px;
+        grid-column: 3/4;
+        grid-row: 1/2;
+        margin: 5px;
+    }
+    
+    #spotlight2{
+        border: solid black 1px;
+        grid-column:3/4;
+        grid-row: 2/3;
+        margin: 5px;
+    }
+
+    #spotlight3{
+        display:grid;
+        border: solid black 1px;
+        grid-column: 3/4;
+        grid-row: 3/4;
+        margin: 5px;
     }
 }
+
+
+
