--- a/dom/styles/small.css
+++ b/dom/styles/small.css
@@ -12,36 +12,37 @@
 
 
 :root {
-    
-    --heading-font: "Unbounded";
-    --paragraph-font: "Unbounded";
-  }
-  
+
+	--heading-font: "Unbounded";
+	--paragraph-font: "Unbounded";
+}
 
 
-body{
-    margin: 0 auto;
-    padding: .5rem;
-    font-family: 'Unbounded', Arial, sans-serif;
-    font-size: 16px;
-    width: 700px;
+
+body {
+	margin: 0 auto;
+	padding: .5rem;
+	font-family: 'Unbounded', Arial, sans-serif;
+	font-size: 16px;
+	width: 700px;
 	background-color: rgb(215, 255, 207);
 
 }
 
 li {
-    letter-spacing: .6px;
-    line-height: 25px;
+	letter-spacing: .6px;
+	line-height: 25px;
 }
 
-p, h2{
-    font-family: var(--paragraph-font);
+p,
+h2 {
+	font-family: var(--paragraph-font);
 }
 
 
 .main {
-    padding: 1rem;
-    color: black;
+	padding: 1rem;
+	color: black;
 }
 
 * {
@@ -106,4 +107,3 @@ li {
 	align-items: center;
 	justify-content: space-between;
 }
-
