--- a/lesson 4/styles/base.css
+++ b/lesson 4/styles/base.css
@@ -21,7 +21,7 @@ nav ul {
 
 nav a {
     float: left;
-    color: #708090;
+    color: #A0522D;
     text-align: center;
     padding: 12px;
     text-decoration: none;
@@ -46,12 +46,12 @@ main {
 }
 
 footer{
-    background-color: rgb(216, 237, 237);
+    background-color: #A0522D;
     border-radius: 5px;
-    box-shadow: 5px 5px 10px #4e6374;
+    box-shadow: 5px 5px 10px #FFFACD;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
     align-content: center;
     list-style-type: none;
@@ -63,7 +63,7 @@ h1 {
 }
 
 .subhead {
-	color: #708090;
+	color: #FFFACD;
     font-family: 'Merriweather Sans';
     font-size: 28px;
   
@@ -74,6 +74,17 @@ h1 {
     margin-top: -21px;
 }
 
+#hero {
+    width: 100%;
+}
+
+#join_us {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: #FFFACD;
+    border-radius: 5px;
+}
 .social-link {
     display: flex;
     justify-content: center;
@@ -88,13 +99,8 @@ h1 {
 }
 /* id selector */
 
-#hero-img img {
+#augustageorgia {
     width: 100%;
-}
-
-#logo-img img {
-    width: 120px;
-    margin-left: -900px
 }
 
 html, body {
@@ -104,12 +110,13 @@ html, body {
 
 #content{
     min-height: 100%;
+    display: grid;
 }
 
 nav{
-    background-color:rgb(216, 237, 237);
+    background-color:#A0522D;
     border-radius: 5px;
-    box-shadow: 5px 5px 10px #4e6374;
+    box-shadow: 5px 5px 10px #FFFACD;
     align-items: center;
     align-content: center;
     list-style-type: none;
@@ -133,7 +140,7 @@ a:hover{
 
 
 nav h1{
-    color:#0a1256;
+    color:#FFFACD;
     padding: 5px;
 }
 
@@ -161,18 +168,50 @@ nav ul.open {display: block;}
 
 #hero{
     border: solid black 1px;
+    grid-column: 1/3;
+        grid-row: 1/2;
+        margin: 5px;
+}
+
+#date{
+    color: #FFFACD;
 }
 
 #events{
     border: solid black 1px;
+    grid-column: 1/2;
+        margin: 5px;
 }
 
 #weather{
     border: solid black 1px;
+        margin: 5px;
+        grid-column: 2/3;
 }
+
+#weatherimg {
+    width: 100%;
+}
+
+#trolley {
+    width: 100%;
+    height: 394px;
+}
+
+#kayak {
+    width: 100%;
+}
+
+#church {
+    width: 100%;
+} 
+
 
 #news{
     border: solid black 1px;
+        grid-column:1/3 ;
+        grid-row: 2/3;
+        margin: 5px;
 }
 
 #join{
@@ -181,10 +220,16 @@ nav ul.open {display: block;}
 
 #spotlight1{
     border: solid black 1px;
+        grid-column: 1/2;
+        grid-row:3/4;
+        margin: 5px;
 }
 
 #spotlight2{
     border: solid black 1px;
+    grid-column:2/3;
+        grid-row: 3/4;
+        margin: 5px;
 }
 
 #spotlight3{
