--- a/lesson 4/styles/base.css
+++ b/lesson 4/styles/base.css
@@ -1,15 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@700&family=Merriweather+Sans:wght@700&display=swap');
 
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
-  }
+}
 
+h1 {
+    font-family: 'Merriweather Sans';
+    font-size: 30px;
+    text-align: center;
+    color: #0e2143;
+}
+
+
+
+h2 {
+    text-align: center;
+    color: white;
+}
+
+h3 {
+    text-align: center;
+    color: #0e2143
+}
+
+h5 {
+    font-family: 'Merriweather Sans';
+    font-size: 25px;
+    color: white;
+    text-align: center
+}
+
+h4 {
+    color: #404f5a;
+    font-family: 'Merriweather Sans';
+    font-size: 35px;
+    color: white;
+}
+
+h6 {
+    font-family: 'Merriweather Sans';
+    font-size: 12px;
+    color: white;
+    text-align: center
+}
+
+p {
+    font-family: 'Alegreya Sans';
+    padding: 20px;
+    font-size: 20px;
+    color: #0e2143
+}
 
 a {
     text-decoration: none;
     text-align: center;
 }
+
 nav ul {
     display: flex;
     justify-content: space-around;
@@ -21,14 +69,14 @@ nav ul {
 
 nav a {
     float: left;
-    color: #A0522D;
+    color: #ffffff;
     text-align: center;
     padding: 12px;
     text-decoration: none;
     font-size: 18px;
     line-height: 25px;
     border-radius: 4px;
-  }
+}
 
 
 ul li {
@@ -39,113 +87,39 @@ p {
     text-align: center;
 }
 
-main {
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 100%;
-}
-
-footer{
-    background-color: #A0522D;
+nav {
+    background-color: #0f4156;
     border-radius: 5px;
-    box-shadow: 5px 5px 10px #FFFACD;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    box-shadow: 5px 5px 10px #afcbdc;
     align-items: center;
     align-content: center;
     list-style-type: none;
-}
-/* class selector */
-h1 {
-    font-family: 'Merriweather Sans';
-    font-size: 35px;
+    padding: 7px;
 }
 
-.subhead {
-	color: #FFFACD;
-    font-family: 'Merriweather Sans';
-    font-size: 28px;
-  
-}
-
-#logo-link1 {
-    display: grid;
-    margin-top: -21px;
-}
-
-#hero {
-    width: 100%;
-}
-
-#join_us {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background: #FFFACD;
-    border-radius: 5px;
-}
-.social-link {
-    display: flex;
-    justify-content: center;
-    column-gap: 20px;;
-    margin-bottom: 50px;
-}
-
-.social-link img {
-    width: 30px;
-    display: flex;
-    flex-direction: column;
-}
-/* id selector */
-
-#augustageorgia {
-    width: 100%;
-}
-
-html, body {
-    height: 100%;
-    margin: 0;
-  }
-
-#content{
-    min-height: 100%;
-    display: grid;
-}
-
-nav{
-    background-color:#A0522D;
-    border-radius: 5px;
-    box-shadow: 5px 5px 10px #FFFACD;
-    align-items: center;
-    align-content: center;
-    list-style-type: none;
-    margin-top: 10px;
-}
-
-button{
+button {
     background-color: transparent;
-    border:none;
-    color:#0a1256;
+    border: none;
+    color: #0a1256;
     float: right;
     font-size: 20px;
     margin: 10px;
 }
 
-a:hover{
+a:hover {
     background-color: lightgoldenrodyellow;
     border-radius: 5px;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px #394a6a;
 }
 
 
-nav h1{
-    color:#FFFACD;
+nav h1 {
+    color: #404f5a;
     padding: 5px;
 }
 
 
-footer h1{
+footer h1 {
     font-size: small;
     color: black;
 }
@@ -154,91 +128,215 @@ nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    float:right;
+    float: right;
     /* position: absolute; */
 }
 
-nav ul li a{
-    display:block;
+nav ul li a {
+    display: block;
 }
 
-nav ul {display: none;}
-nav ul.open {display: block;}
+nav ul {
+    display: none;
+}
+
+nav ul.open {
+    display: block;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+}
+
+footer {
+    background-color: #0f4156;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px #a9cfe3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    list-style-type: none;
+}
 
 
-#hero{
+/* class selector */
+
+.subhead {
+    color: #404f5a;
+    font-family: 'Merriweather Sans';
+    font-size: 28px;
+    color: white;
+
+}
+
+.date {
+    color: #ede8dc;
+    margin-top: 30px;
+}
+
+.social-link {
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+    ;
+    margin-bottom: 50px;
+}
+
+.social-link img {
+    width: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+/* id selector */
+
+#logo-link2 {
+    text-align: center;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+#hero {
+    background-color: #cae0f2;
     border: solid black 1px;
-    grid-column: 1/3;
-        grid-row: 1/2;
-        margin: 5px;
+    position: relative;
+    margin: 5px;
+    text-align: center;
 }
 
-#date{
-    color: #FFFACD;
-}
-
-#events{
+#events {
     border: solid black 1px;
     grid-column: 1/2;
-        margin: 5px;
+    margin: 5px;
+    background-color: #cae0f2;
+    text-align: center;
 }
 
-#weather{
+#weather {
     border: solid black 1px;
-        margin: 5px;
-        grid-column: 2/3;
+    margin: 5px;
+    grid-column: 2/3;
+    background-color: #cae0f2;
+    text-align: center;
 }
 
 #weatherimg {
-    width: 100%;
+    width: 50%;
+}
+
+#join h1 {
+    background-color: #356da1;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #4b6a8d;
+    height: 50px;
+    padding: 10px;
+
 }
 
 #trolley {
-    width: 100%;
-    height: 394px;
+    width: 50%;
 }
 
 #kayak {
-    width: 100%;
+    width: 50%;
 }
 
 #church {
+    width: 50%;
+}
+
+
+#news {
+    border: solid black 1px;
+    margin: 5px;
+    background-color: #cae0f2;
+    text-align: center;
+}
+
+#join {
+    display: none;
+    background-color: #cae0f2;
+    text-align: center;
+}
+
+#year {
+    font-family: 'Merriweather Sans';
+    font-size: 10px;
+    margin: 15px;
+    color: white;
+    text-align: center
+}
+
+#trolleytransport1 {
+    border: solid black 1px;
+    grid-column: 1/2;
+    grid-row: 3/4;
+    margin: 5px;
+    background-color: #cae0f2;
+    text-align: center;
+}
+
+#kayakingclub2 {
+    border: solid black 1px;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    margin: 5px;
+    background-color: #cae0f2;
+    text-align: center;
+}
+
+#historic3 {
+    border: solid black 1px;
+    background-color: #cae0f2;
+    grid-column: 3/4;
+    grid-row: 3/4;
+    text-align: center;
+}
+
+#join_us {
+    position: absolute;
+    bottom: 0;
+    right: 25px;
+    background-color: #356da1;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #4b6a8d;
+    height: 30px;
+    padding: 10px;
+    text-align: center;
+}
+
+
+#augustageorgia {
     width: 100%;
-} 
-
-
-#news{
-    border: solid black 1px;
-        grid-column:1/3 ;
-        grid-row: 2/3;
-        margin: 5px;
 }
 
-#join{
-    display:none;
+#content {
+    min-height: 100%;
+    display: grid;
 }
 
-#spotlight1{
-    border: solid black 1px;
-        grid-column: 1/2;
-        grid-row:3/4;
-        margin: 5px;
+
+
+
+
+#hamburgerBtn span:nth-child(1) {
+    display: block;
 }
 
-#spotlight2{
-    border: solid black 1px;
-    grid-column:2/3;
-        grid-row: 3/4;
-        margin: 5px;
+#hamburgerBtn span:nth-child(2) {
+    display: none;
 }
 
-#spotlight3{
-    display:none;
+#hamburgerBtn.open span:nth-child(1) {
+    display: none;
 }
 
-#hamburgerBtn span:nth-child(1) {display: block;}
-#hamburgerBtn span:nth-child(2) {display: none;}
-
-#hamburgerBtn.open span:nth-child(1) {display: none;}
-#hamburgerBtn.open span:nth-child(2) {display: block;}
-
+#hamburgerBtn.open span:nth-child(2) {
+    display: block;
+}
