--- a/lesson 4/styles/large.css
+++ b/lesson 4/styles/large.css
@@ -1,68 +1,68 @@
-@media only screen and (min-width: 1290px){
-    nav ul{
-        display:flex;
+@media only screen and (min-width: 1290px) {
+    nav ul {
+        display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         margin: 10px;
+        font-size: 1.1em;
     }
 
-    main{
-        display:grid;
+    main {
         grid-template-columns: 1fr 2fr 1fr;
     }
-    
-    #hero{
+
+    #hero {
         border: solid black 1px;
         grid-column: 2/3;
         grid-row: 1/3;
         margin: 5px;
     }
-    
-    #events{
+
+    #events {
         border: solid black 1px;
         grid-column: 1/2;
         grid-row: 1/2;
         margin: 5px;
     }
-    
-    #weather{
+
+    #weather {
         border: solid black 1px;
         margin: 5px;
         grid-column: 1/2;
         grid-row: 2/3;
     }
-    
-    #news{
+
+    #news {
         border: solid black 1px;
         grid-column: 2/3;
         grid-row: 3/4;
         margin: 5px;
     }
 
-    #join{
-        display:grid;
+    #join {
+        display: grid;
         border: solid black 1px;
-        grid-column:1/2;
+        grid-column: 1/2;
         grid-row: 3/4;
         margin: 5px;
     }
-    
+
     #trolleytransport1 {
-    border: solid black 1px;
-    grid-column: 3/4;
-    grid-row: 1/2;
-    margin: 5px;
+        border: solid black 1px;
+        grid-column: 3/4;
+        grid-row: 1/2;
+        margin: 5px;
     }
-    
+
     #kayakingclub2 {
         border: solid black 1px;
-        grid-column:3/4;
+        grid-column: 3/4;
         grid-row: 2/3;
         margin: 5px;
     }
-    
 
-    #historic3{
+
+    #historic3 {
         border: solid black 1px;
         grid-column: 3/4;
         grid-row: 3/4;
@@ -70,6 +70,9 @@
         text-align: center;
     }
 
+    .spotlights {
+        grid-column: 3/4;
+        grid-row: 1/4;
     }
 
-
+}
