--- a/lesson 4/styles/medium.css
+++ b/lesson 4/styles/medium.css
@@ -1,73 +1,78 @@
-@media only screen and (min-width: 750px){
-    nav ul{
-        display:flex;
+@media only screen and (min-width: 750px) {
+    nav ul {
+        display: flex;
         flex-direction: row;
         justify-content: space-around;
         margin: 5px;
+        font-size: 1.1em;
     }
 
-    button{
-        display:none;
+    button {
+        display: none;
     }
 
-    li{
-      margin-left: 5vw;
+    li {
+        margin-left: 5vw;
     }
 
-    .date{
+    .date {
         justify-content: center;
     }
 
-    main{
-        display:grid;
+    main {
         grid-template-columns: 2fr 1fr;
     }
-    
-    #hero{
+
+    #hero {
         border: solid black 1px;
         grid-column: 1/3;
         grid-row: 1/2;
         margin: 5px;
+
     }
-    
-    #events{
+
+    #events {
         border: solid black 1px;
         grid-column: 1/2;
+        grid-row: 5/6;
         margin: 5px;
     }
-    
-    #weather{
+
+    #weather {
         border: solid black 1px;
         margin: 5px;
         grid-column: 2/3;
+        grid-row: 5/6;
     }
-    
-    #news{
+
+    #news {
         border: solid black 1px;
         grid-row: 2/3;
+        grid-column: 1/3;
         margin: 5px;
     }
 
-    #join{
-        display:grid;
+    #join {
+        display: grid;
         border: solid black 1px;
-        grid-column:1/2;
+        grid-column: 1/3;
         grid-row: 4/5;
         margin: 5px;
     }
-    
-    #trolleytransport1{
-        border: solid black 1px;
-        grid-column: 1/2;
-        grid-row:3/4;
-        margin: 5px;
-    }
-    
-    #kayakingclub2{
-        border: solid black 1px;
-        grid-column:2/3;
-        grid-row: 3/4;
-        margin: 5px;
-    }
-}
 
+    #trolleytransport1 {
+        border: solid black 1px;
+        margin: 5px;
+    }
+
+    #kayakingclub2 {
+        border: solid black 1px;
+        margin: 5px;
+    }
+
+    .spotlights {
+        grid-column: 1/3;
+        grid-row: 3/4;
+    }
+
+}
