Lots of changes for the night ()

--- a/lesson 4/styles/large.css
+++ b/lesson 4/styles/large.css
@@ -74,5 +74,13 @@
         grid-column: 3/4;
         grid-row: 1/4;
     }
-
+    #augustageorgia {
+        display: grid;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    #augustageorgia1 {
+        display: none;
+    }
 }
