--- a/lesson 4/styles/base.css
+++ b/lesson 4/styles/base.css
@@ -95,6 +95,7 @@ nav {
     align-content: center;
     list-style-type: none;
     padding: 7px;
+    width: 100%;
 }
 
 button {
@@ -124,15 +125,15 @@ footer h1 {
     color: black;
 }
 
-nav ul {
+/* nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     float: right;
     /* position: absolute; */
-}
+*/
 
-nav ul li a {
+/* nav ul li a {
     display: block;
 }
 
@@ -142,7 +143,7 @@ nav ul {
 
 nav ul.open {
     display: block;
-}
+} */
 
 main {
     display: grid;
@@ -158,8 +159,7 @@ footer {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    align-content: center;
-    list-style-type: none;
+    width: 100%;
 }
 
 
@@ -308,14 +308,22 @@ footer {
     width: 100%;
 }
 
+#augustaqeorgia1 {
+    width: 100%;
+}
+
 #content {
     min-height: 100%;
     display: grid;
 }
 
+#augustageorgia {
+    display: none;
+}
 
-
-
+#augustageorgia1 {
+    display: none;
+}
 
 #hamburgerBtn span:nth-child(1) {
     display: block;
