--- a/lesson 4/styles/medium.css
+++ b/lesson 4/styles/medium.css
@@ -7,8 +7,16 @@
         font-size: 1.1em;
     }
 
-    button {
+    nav a {
+        display: block;
+    }
+
+    #hamburgerBtn {
         display: none;
+    }
+
+    #primaryNav {
+        flex-direction: row;
     }
 
     li {
