--- a/lesson 4/styles/base.css
+++ b/lesson 4/styles/base.css
@@ -539,7 +539,7 @@ input[type='submit']{
 }
 
 #cards, #list{
-    color: #0a1256;
+    color: #1d288d;
     padding: 0 8px;
     cursor: pointer;
 }
