--- a/lesson11/styles/main.css
+++ b/lesson11/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@500&family=PT+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@600&display=swap');
 
 body {
     height: 100%;
@@ -10,7 +10,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-    font-family: 'Open Sans', serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 img {
