--- a/FinalWebsite/styles/bountiful.css
+++ b/FinalWebsite/styles/bountiful.css
@@ -130,6 +130,52 @@ footer img {
     padding: 15px;
 }
 
+#about-info {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: rgb(169, 216, 239);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 50%;
+    border-radius: 10px;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+}
+
+#ab-title {
+   font-size: 40px; 
+}
+
+#ab-para {
+font-size: 25px;
+text-align: center;
+}
+
+#map-img {
+    width:50%;
+}
+
+#surfers img {
+    width: 50%;
+    display: grid;
+    grid-column: 1/2;
+}
+
+#beach img {
+    width: 50%;
+    display: grid;
+    grid-column: 1/3;
+}
+
+#ocean img {
+    width: 50%;
+}
+
+#pineapple img {
+    width: 50%;
+}
+
 /* class selector */
 
 .sandiegotext {
