--- a/FinalWebsite/styles/normalize.css
+++ b/FinalWebsite/styles/normalize.css
@@ -166,6 +166,8 @@
     font-size: 100%; /* 1 */
     line-height: 1.15; /* 1 */
     margin: 0; /* 2 */
+    background-color: rgb(255, 228, 228);
+    border: 1px black solid;
   }
   
   /**
