--- a/FinalWebsite/styles/freshpage.css
+++ b/FinalWebsite/styles/freshpage.css
@@ -3,19 +3,18 @@ form {
     min-width: 280px;
     margin-top: 30px;
     padding: 20px;
-    background-color: white;
+    background-color: rgb(255, 228, 228);
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-input[type=text], select {
+input[type=text] {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid #302d2d;
+    border-radius: 2px;
     box-sizing: border-box;
+    background-color: rgb(255, 228, 228);
   }
   
   input[type=submit] {
@@ -27,6 +26,29 @@ input[type=text], select {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    background-color: rgb(255, 228, 228);
+  }
+
+  input [type=tel] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: rgb(255, 228, 228);
+  }
+
+  input [type=email] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: rgb(255, 228, 228);
   }
   
   input[type=submit]:hover {
